EMC-130: merged in develop, resolved conflicts, fixed tests